# harness

./: .gitignore  README.md
contracts/: repo_profile.md  (+1 more)
python/: README.md  pyproject.toml
python/src/harness/: __init__.py  runtime_cli.py
python/src/harness/shared/: __init__.py
python/src/harness/shared/artifacts/: __init__.py  apply_sink.py  logs_artifact.py  plan_artifact.py  state_artifact.py  state_update_sink.py  steps_artifact.py
python/src/harness/shared/contracts/: __init__.py  actions.py  approval.py  docs_only.py  profile.py  results.py  state.py  workflow.py
python/src/harness/shared/core/: __init__.py  diff_helper.py  gradle_result_inspector.py  guard_executor.py  json_util.py  markdown_section_index.py  phase_spec_loader.py  repo_profile_loader.py  snapshot_helper.py  start_mode_resolver.py  state_migration.py  step_source.py  steps_parser.py  task_paths.py  timestamp.py  verification_gate_selector.py  yaml_block.py
python/tests/: test_apply_runtime.py  test_apply_sink.py  test_checkpoint_runtime.py  test_diff_helper.py  test_docs_only_runtime.py  test_gradle_result_inspector.py  test_guard_and_profile.py  test_logs_artifact.py  test_markdown_section_index.py  test_next_runtime.py  test_phase_spec_loader.py  test_plan_current_state.py  test_reason_code_inventory.py  test_review_runtime.py  test_start_mode_resolver.py  test_start_runtime.py  test_state_artifact.py  test_state_migration.py  test_state_update_sink.py  test_steps_parser.py  test_test_report_skill_bridge.py  test_verification_gate_selector.py  test_verify_runtime.py
(+33 files in other folders)
